Update requirements.txt with complete dependencies for smolagents and all tools

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
-altair
-pandas
+smolagents
+python-dotenv
+pytz
+pyyaml
+gradio
+huggingface_hub
 streamlit
+ddgs
+requests
+duckduckgo-search
+google-search-results
+Pillow
