Update README: Add HF_REPO_PUSH_TOKEN documentation

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ OPENWEATHERMAP_API_KEY=your_openweather_api_key_here
 # SerpAPI Key (Optional - for Google Search)
 # Get your key from: https://serpapi.com/
 SERPAPI_API_KEY=your_serpapi_key_here
+
+HF_REPO_PUSH_TOKEN=your_huggingface_repo_push_token_here
