--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -144,6 +144,8 @@ jobs:
         echo "📤 Pushing to Hugging Face Spaces..."
         git config user.email "github-actions[bot]@users.noreply.github.com"
         git config user.name "GitHub Actions"
+        # Unshallow the repository to get full history (required for HF Spaces)
+        git fetch --unshallow || true
         git remote add hf-spaces https://muk0644:${HF_REPO_TOKEN}@huggingface.co/spaces/muk0644/smolagents-ai-assistant.git || true
         git fetch hf-spaces main || true
         # Use --force to override diverged history (GitHub is source of truth)
