Add Qwen + Gemini 2.5 Flash multi-model support

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,9 +2,9 @@ name: CI/CD Pipeline for SmolAgents AI Assistant
 
 on:
   push:
-    branches: [ feature/cicd-workflow ]
+    branches: [ feature/cicd-workflow2 ]
   pull_request:
-    branches: [ feature/cicd-workflow ]
+    branches: [ feature/cicd-workflow2 ]
 
 jobs:
   build-and-test:
@@ -32,6 +32,8 @@ jobs:
     
     # Step 4: Install dependencies from requirements.txt
     - name: Install dependencies
+      env:
+        GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
@@ -62,9 +64,10 @@ jobs:
       continue-on-error: true
     
     # Step 9: Validate environment secrets
-    - name: Validate HF_TOKEN secret
+    - name: Validate environment secrets
       env:
         HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
         SERPAPI_API_KEY: ${{ secrets.SERPAPI_API_KEY }}
         OPENWEATHERMAP_API_KEY: ${{ secrets.OPENWEATHERMAP_API_KEY }}
       run: |
@@ -75,6 +78,12 @@ jobs:
           exit 1
         else
           echo "✅ HF_TOKEN is present (length: ${#HF_TOKEN} characters)"
+        fi
+        
+        if [ -z "$GOOGLE_API_KEY" ]; then
+          echo "⚠️ WARNING: GOOGLE_API_KEY is not set"
+        else
+          echo "✅ GOOGLE_API_KEY is present"
         fi
         
         if [ -z "$SERPAPI_API_KEY" ]; then
@@ -106,6 +115,9 @@ jobs:
     
     # Step 11: Verify imports (syntax check without running)
     - name: Verify Python imports
+      env:
+        GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+        HF_TOKEN: ${{ secrets.HF_TOKEN }}
       run: |
         python -c "import ast; [ast.parse(open(f).read()) for f in ['app.py', 'agent.py', 'tools.py']]"
         echo "✅ Python syntax validation passed"
