Update CI/CD branch: feature/cicd-workflow2 → cicd-workflow2

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,9 +2,9 @@ name: CI/CD Pipeline for SmolAgents AI Assistant
 
 on:
   push:
-    branches: [ feature/cicd-workflow2 ]
+    branches: [ cicd-workflow2 ]
   pull_request:
-    branches: [ feature/cicd-workflow2 ]
+    branches: [ cicd-workflow2 ]
 
 jobs:
   build-and-test:
