--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,5 @@ Pillow
 litellm>=1.61.0
 google-generativeai>=0.8.3
 langchain-community>=0.3.0
-google-search-results
+langchain-text-splitters>=0.3.0
+rank-bm25>=0.2.2
