--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ google-search-results
 Pillow
 litellm>=1.61.0
 google-generativeai>=0.8.3
+langchain>=0.3.0
 langchain-community>=0.3.0
 langchain-text-splitters>=0.3.0
 rank-bm25>=0.2.2
